fix scrollbar to respons

--- a/css/contact.css
+++ b/css/contact.css
@@ -11,7 +11,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: calc(100vh - 100px);
   width: 100%;
   min-width: 0;
 }
@@ -32,7 +32,6 @@
   display: flex;
   flex-direction: column;
   min-height: calc(100vh - 100px);
-  height: 100vh;
   background-color: #ffffff;
   border-right: 1px solid #e0e0e009;
   box-shadow: 4px 0 8px rgba(0, 0, 0, 0.08);
